<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EPCC Monster Hunt</string>
    <string name="hint">Hint:</string>
    <string name="hint_one">No hint given</string>
    <string name="leaders_board">Leader\'s Board</string>
    <string name="leader_1">Leader one spot</string>
    <string name="leader_2">Leader two spot</string>
    <string name="leader_3">Leader three spot</string>
    <string name="photo_button">Scan!!!</string>
    <string name="action_settings">Settings</string>
	<string name="generic_description">generic description</string>
	<string name="score">SCORE: </string>
	<string name="score_init">0</string>
	
	<string name="found_alien">You found the Alien!!!</string>
	<string name="found_blob">You found the Blob!!!</string>
	<string name="found_chutulu">You found Cthulhu!!!</string>
	<string name="found_clops">You found the Cyclops!!!</string>
	<string name="found_frankie">You found Frankenstien!!!</string>
	<string name="found_mummy">You found the Mummy!!!</string>
	<string name="found_tomato">You found the Tomato!!!</string>
	<string name="found_vampire">You found the Vampire!!!</string>
	<string name="found_werewolf">You found the Werewolf!!!</string>
	<string name="found_witch">You found the witch!!</string>
	<string name="found_yeti">You found the Yeti!!!</string>

	<string name="ticket_number">Ticket Number:</string>
	<string name="ticket_button">Go!!!</string>

	<string name="bad_connection">Connection not established:</string>
	<string name="bad_connection_description">A connection with a Google account is required to play this game.
	Please try to sign-in again.</string>
	<string name="bad_connection_button">Sign-in</string>

	<string name="signin_other_error">There was an error signing in. Please try again later</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
