<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="edu.epcc.fallfestapp.MainActivity" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="2dp"
            android:text="@string/hint"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/hintText"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView1"
            android:padding="2dp"
            android:text="@string/hint_one"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/monster_ImageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="0.68"
        android:scaleType="fitCenter"
        android:background="@color/black"
        android:cropToPadding="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_weight="0.58" >
        
        <TextView
      	    android:id="@+id/textView2"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:layout_alignParentTop="true"
      	    android:layout_centerHorizontal="true"
      	    android:padding="2dp"
      	    android:text="@string/leaders_board"
      	    android:textColor="@color/red"
      	    android:textAppearance="?android:attr/textAppearanceLarge" />
        
      	<LinearLayout
      	    android:layout_width="match_parent"
      	    android:layout_height="wrap_content"
      	    android:layout_above="@+id/photoButton"
      	    android:layout_alignParentLeft="true"
      	    android:layout_alignParentTop="true"
      	    android:orientation="vertical" >

      	    <TextView
      	        android:id="@+id/leader1Text"
      	        android:layout_width="match_parent"
      	        android:layout_height="wrap_content"
      	        android:layout_marginTop="30dp"
      	        android:padding="2dp"
      	        android:text="@string/leader_1"
      	        android:textAppearance="?android:attr/textAppearanceMedium"
      	        android:textColor="@color/red" />

      	    <TextView
      	        android:id="@+id/leader2Text"
      	        android:layout_width="match_parent"
      	        android:layout_height="wrap_content"
      	        android:padding="2dp"
      	        android:text="@string/leader_2"
      	        android:textAppearance="?android:attr/textAppearanceMedium"
      	        android:textColor="@color/red" />

      	    <TextView
      	        android:id="@+id/leader3Text"
      	        android:layout_width="match_parent"
      	        android:layout_height="wrap_content"
      	        android:padding="2dp"
      	        android:text="@string/leader_3"
      	        android:textAppearance="?android:attr/textAppearanceMedium"
      	        android:textColor="@color/red" />

      	</LinearLayout>

      	<Button
            android:id="@+id/photoButton"
            android:text="@string/photo_button"
			android:textColor="#050402"
			android:textSize="30sp"
			android:layout_width="150dp"
			android:layout_height="45dp"
			android:background="@drawable/buttonshape"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
             />
      	

    </RelativeLayout>
</LinearLayout>
</FrameLayout>